--- a/app/templates/songs.html
+++ b/app/templates/songs.html
@@ -21,7 +21,7 @@
         </div>
                 <div class="container inner-palay ">
                   <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 wrapper-button">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 wrapper-button">
                       <sound-manager></sound-manager>
                       	<button prev-track><span class="icon-previous2"></span></button>
                         <button pause-music><span class="icon-pause2"></span></button>
@@ -29,15 +29,15 @@
                         <button next-track><span class="icon-next2"></span></button>
                         <button repeat-music><span class="icon-loop2"></span></button>
                     </div>
-                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 wrap-pad">
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 wrap-pad">
                       <div class="row">
-                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-9">
                           <div class="seekBase" seek-track>
                               <div class="seekLoad" ng-style="{width : ( progress + '%' ) }"></div>
                           </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                          <div class="num-right">{{ currentPostion }} / {{ currentDuration }}</div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-3">
+                          <div class="num-right num-hide">{{ currentPostion }} / {{ currentDuration }}</div>
                           <div class="but-right">
                             <button music-volume data-type="increase"><span class="icon-volume-increase "></span></button>
                             <button music-volume data-type="decrease"><span class="icon-volume-decrease "></span></button>
@@ -45,12 +45,12 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 xs-hidden">
                       <div class="row" ng-repeat="song in playlist">
-                        <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
                           <img src="{{song.img}}" class="img-play"/>
                         </div>
-                        <div class="col-lg-7 col-sm-7 col-xs-7 col-md-7 wrap-title">
+                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8  wrap-title">
                           <div class="title">Грає поточна пісня:</div>
                           <div class="title-music">{{song.title}}</div>
                         </div>
@@ -63,16 +63,16 @@
                   <div class="row">
                     <div class="container">
                       <div class="row">
-                        <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
                           <p class="h5">Playlist</p>
                         </div>
-                        <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                           <button play-all="songs"  class="h5" data-play="false">Add all</button>
                         </div>
-                        <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
                           <button play-all="songs"  class="h5">Play all</button>
                         </div>
-                        <div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
                           <button clear-playlist  class="h5">Clear Playlist</button>
                         </div>
                       </div>
