--- a/app/templates/portfolio-alt.html
+++ b/app/templates/portfolio-alt.html
@@ -1,154 +1,25 @@
 
 
 <body <header class="ae-container-fluid ae-container-fluid--full rk-header ">
-  <header class="ae-container-fluid ae-container-fluid--full rk-header ">
-    <div class="ae-container-fluid rk-topbar">
-      <h1 class="rk-logo"><a href="../index.html">Портфоліо<sup>cheremosh</sup></a></h1>
-      <nav class="rk-navigation">
-        <ul class="rk-menu">
-          <li class="active rk-menu__item"><a href="portfolio.html" class="rk-menu__link"> 2009 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Рахів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Львів Україна</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link"> 2010 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Трускавець Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Яворів Україна</a></li>
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Кошіце Словаччина</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Львів Україна</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link"> 2011 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Рахів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Кардіца Греція</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Львів Україна</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link"> 2012 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Рахів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Люблін Польща</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Львів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Олесько, Соколівка, Надвірна</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="blog.html" class="rk-menu__link"> 2013 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Рахів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Ходорів україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Львів Україна</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Скоп'є Македонія</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Рейдова Словаччина</a></li>
-                <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Коломия Україна</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="#0" class="rk-menu__link">2014 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Стамбул Турція</a></li>
-              </ul>
-            </nav>
-          </li>
-          <li class="rk-menu__item"><a href="#0" class="rk-menu__link">2015 рік</a>
-            <nav class="rk-menu__sub">
-              <ul class="rk-container">
-                <li class="rk-menu__item"><a href="../index.html" class="rk-menu__link">Львів Україна</a></li>
-                <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">Цешин Польща</a></li>
-              </ul>
-            </nav>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+
     <section class="ae-container-fluid ae-container-fluid--full">
-      <header class="rk-portfolio-cover  item-inside-1">
-        <div class="item-inside__meta">
-          <h1 class="ae-u-bolder rk-portfolio-title ">Цешин Польща</h1>
-          <p class="ae-theta rk-portfolio-category ">Опис</p>
-        </div>
-      </header>
       <div class="ae-container-fluid">
         <div class="ae-grid ae-grid--collapse rk-portfolio-info ">
           <div class="ae-grid__item item-lg-8 item-sm--center au-xs-ta-center au-lg-ta-left">
-            <h2 class="rk-portfolio-inner-title ">Essential Stationery Branding Mockup</h2>
+            <h2 class="rk-portfolio-inner-title ">{{catcat.name}}</h2>
           </div>
           <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right rk-portfolio-details">
-            <p class="rk-portfolio-inner-client "><span class="ae-lambda">Client: </span><span class="ae-u-bolder">Agency Design Studio</span></p>
-            <p class="au-underline rk-portfolio-inner-website "><a href="#0" class="ae-kappa">www.agencydesign.com</a></p>
-            <p class="ae-kappa ae-u-bold rk-portfolio-inner-date ">12 August, 2015</p>
+            <p class="au-underline rk-portfolio-inner-website "><a href="{{portfolio.website}}" class="ae-kappa">{{portfolio.website}}</a></p>
+            <p class="ae-kappa ae-u-bold rk-portfolio-inner-date ">{{portfolio.date}}, {{yearyear.year}}</p>
           </div>
         </div>
       </div>
       <div class="ae-container-fluid ae-container-fluid--inner rk-portfolio--inner">
         <div class="ae-grid ae-grid--collapse au-xs-ptp-1">
           <div class="ae-grid__item item-lg-5 au-lg-ptp-1">
-            <h4 class="ae-u-bolder">Left Box Text</h4>
-            <p class="ae-eta">A series of essential stationery format to showcase your branding projects. </p>
-            <p class="ae-eta">It includes a A6 flyer, A5 folder, A4 horizontal paper and a business card mockup. You can easily put your own graphics and create a new layout according to your needs.</p>
+            <h4 class="ae-u-bolder">{{portfolio.title}}</h4>
+            <p class="ae-eta">{{portfolio.description}}</p>
           </div>
-          <div class="ae-grid__item item-lg-6 item-lg--offset-1"><img src="../img/portfolio/inner-1.jpg" alt="Urku Portfolio"></div>
+          <div class="ae-grid__item item-lg-6 item-lg--offset-1"><img src="{{portfolio.img.url}}" alt="Urku Portfolio"></div>
         </div>
-        <div class="ae-grid ae-grid--collapse">
-          <div class="ae-grid__item item-lg-8"><img src="../img/portfolio/inner-2.jpg" alt="Urku Portfolio"></div>
-          <div class="ae-grid__item item-lg-3 item-lg--offset-1 au-lg-ptp-1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <p class="au-mb-3">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit <br>in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-            <p class="ae-u-bolder">Right Box Small Text</p>
-          </div>
-        </div>
-        <div class="ae-grid ae-grid--collapse au-xs-ptp-1 au-xs-pbp-1">
-          <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-            <h4 class="ae-u-bolder">Full Wide Text</h4>
-            <p class="ae-eta">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="ae-eta">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
-          </div>
-        </div>
-        <div class="ae-grid ae-grid--collapse">
-          <div class="ae-grid__item item-lg--auto"><img src="../img/portfolio/project-1.jpg" alt="Urku Portfolio"></div>
-        </div>
-        <div class="ae-grid ae-grid--collapse">
-          <div class="ae-grid__item item-lg-6"><img src="../img/portfolio/inner-3.jpg" alt="Urku Portfolio"></div>
-          <div class="ae-grid__item item-lg-5 item-lg--offset-1 au-lg-ptp-1">
-            <h4 class="ae-u-bolder">Right Box Text</h4>
-            <p class="ae-eta">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-            <p class="ae-eta">It includes a A6 flyer, A5 folder, A4 horizontal paper and a business card mockup. You can easily put your own graphics and create a new layout according to your needs.</p>
-          </div>
-        </div>
-        <div class="ae-grid--alt test">
-          <div class="ae-grid__item--alt item-sm--auto item-sm--offset-1 item-lg--offset-0 item-sm--end item-sm--bottom">
-            <div class="ae-grid ae-grid--alt8 au-xs-ta-center au-sm-ta-left">
-              <div class="ae-grid__item--alt8 item-lg-6"><span class="ae-u-boldest">1.</span>
-                <p class="au-mt-1">Suspendisse ultricies tellus eget nisl molestie, quis sagittis mauris placerat.</p><span class="ae-u-boldest">2.</span>
-                <p class="au-mt-1">Pellentesque et nulla pulvinar, bibendum quam ac, cursus turpis.</p>
-              </div>
-              <div class="ae-grid__item--alt8 item-lg-6"><span class="ae-u-boldest">3.</span>
-                <p class="au-mt-1">Sed quam odio, blandit sit amet dapibus id, aliquet sollicitudin enim. </p><span class="ae-u-boldest">4.</span>
-                <p class="au-mt-1">Morbi hendrerit laoreet lectus a fringilla.</p>
-              </div>
-            </div>
-          </div>
-          <div class="ae-grid__item--alt item-sm--auto item-lg-3 item-lg--offset-1 item-lg--end"><img src="../img/portfolio/inner-4.jpg" alt="Urku Portfolio"></div>
-        </div>
-      </div>
-      <div class="ae-container-fluid au-pt-4 au-pb-4">
-        <button href="#0" class="au-mt-2 arrow-button arrow-button--right">Next Project
-          <svg>
-            <use xlink:href="../img/portfolio/symbols.svg#arrow"></use>
-          </svg>
-        </button>
-      </div>
     </section>
