--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -140,20 +140,20 @@
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6">
-					<form action="http://formspree.io/agragregra@ya.ru" class="main_form" novalidate target="_blank" method="post">
+					<form action="http://formspree.io/yaroshenko270@gmail.com" class="main_form" novalidate target="_blank" method="post">
 						<label class="form-group">
 							<span class="color_element">*</span> Ваше імя:
-							<input type="text" name="name" placeholder="Ваше імя" data-validation-required-message="Вы не ввели имя" required />
+							<input type="text" name="name" placeholder="Ваше імя" style="color: #999;!impotant" data-validation-required-message="Ви не ввели ім'я" required />
 							<span class="help-block text-danger"></span>
 						</label>
 						<label class="form-group">
 							<span class="color_element">*</span> Ваш E-mail:
-							<input type="email" name="email" placeholder="Ваш E-mail" data-validation-required-message="Не корректно введен E-mail" required />
+							<input type="email" name="email" placeholder="Ваш E-mail" data-validation-required-message="Не коректно ввели E-mail" required />
 							<span class="help-block text-danger"></span>
 						</label>
 						<label class="form-group">
 							<span class="color_element">*</span> Ваше повідомлення:
-							<textarea name="message" placeholder="Ваше повідомлення" data-validation-required-message="Вы не ввели сообщение" required></textarea>
+							<textarea name="message" placeholder="Ваше повідомлення" data-validation-required-message="Ви не ввели повідомлення" required></textarea>
 							<span class="help-block text-danger"></span>
 						</label>
 						<button>Відправити</button>
