--- a/app/css/style-player.css
+++ b/app/css/style-player.css
@@ -151,7 +151,7 @@
 .wrap-pad {
   padding-top: 10px;
 }
-.icon-facebook2, .icon-twitter, .icon-vk, .icon-instagram {
+.icon-facebook2, .icon-twitter, .icon-vk, .icon-instagram, .icon-youtube2 {
   color: #2EA2CC;
 }
 
