--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,13 +1,13 @@
 
         <header class="ae-container-fluid ae-container-fluid--full rk-header ">
           <div class="ae-container-fluid rk-topbar">
-            <h1 class="rk-logo"><a href="index.html">Портфоліо<sup>cheremosh</sup></a></h1>
+            <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
             <nav class="rk-navigation">
               <ul class="rk-menu">
                 <li class="active rk-menu__item" ng-repeat="years in year"><a ng-mouseover="setCategory(years.objectId)" href="" class="rk-menu__link">{{years.year}}</a>
                   <nav class="rk-menu__sub">
                     <ul class="rk-container">
-                      <li ng-repeat="category in items2" class="rk-menu__item"><a ng-click="setPortfolio(years.objectId, category.objectId)" href="" class="rk-menu__link">{{category.name }}</a></li>
+                      <li ng-repeat="category in items2" class="rk-menu__item"><a ng-click="setPortfolio(years.objectId, category.objectId)" href="" class="rk-menu__link">{{category.nameLan }}</a></li>
                     </ul>
                   </nav>
                 </li>
