--- a/app/templates/startPage/header.html
+++ b/app/templates/startPage/header.html
@@ -1,17 +1,17 @@
-<script>
+<!-- <script>
 $(document).ready(function() {
 $(".language li").click(function() {
   $(".language li").removeClass("active");
   $(this).addClass("active");
 });
   });
-</script>
-<header class="main_head main_color_bg" parallax-background parallax-ratio="0.4" parallaxVerticalOffset="10" parallaxHorizontalOffset="10">
+</script> -->
+<header class="main_head main_color_bg"  parallax-background parallax-ratio="0.4" parallaxVerticalOffset="10" parallaxHorizontalOffset="10">
     <div class="row">
       <div class="col-md-12">
       <ul class="language">
-        <li class="active">UK</li>
-        <li class="s">USA</li>
+        <li ng-click="getLanguage('Ukraine')" >UK</li>
+        <li ng-click="getLanguage('English')" >USA</li>
       </ul>
       <button class="toggle_mnu" toggle-menu>
 
@@ -23,13 +23,13 @@ $(".language li").click(function() {
       </button>
       <nav class="top_mnu">
         <ul>
-          <li><a href="#about">Про нас</a></li>
-          <li><a ui-sref="base.portfolio">Порфоліо</a></li>
-          <li><a ui-sref="base.video">Відео</a></li>
-          <li><a ui-sref="base.songs">Пісні</a></li>
-          <li><a href="#people">Люд які доклали зусилля</a></li>
-          <li><a ui-sref="base.contact">Контакти</a></li>
-          <li><a ui-sref="base.news">Новини</a></li>
+          <li><a href="#about">{{list[0].s1_about_us}}</a></li>
+          <li><a ui-sref="base.portfolio">{{list[0].s1_portfolio}}</a></li>
+          <li><a ui-sref="base.video">{{list[0].s1_video}}</a></li>
+          <li><a ui-sref="base.songs">{{list[0].s1_song}}</a></li>
+          <li><a href="#people">{{list[0].s1_people_who_have_made_efforts}}</a></li>
+          <li><a ui-sref="base.contact">{{list[0].s1_contacts}}</a></li>
+          <li><a ui-sref="base.news">{{list[0].s1_news}}</a></li>
         </ul>
       </nav>
     </div>
