--- a/app/templates/songs.html
+++ b/app/templates/songs.html
@@ -46,13 +46,13 @@
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 xs-hidden">
-                      <div class="row" ng-repeat="song in playlist">
+                      <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
-                          <img src="{{song.img}}" class="img-play"/>
+                          <img src="../img/img/cheremosh-2.jpg" class="img-play"/>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8  wrap-title">
-                          <div class="title">{{list[0].Plays_the_current_song}}</div>
-                          <div class="title-music">{{song.title}}</div>
+                          <!-- <div class="title">{{list[0].Plays_the_current_song}}</div> -->
+                          <div class="title-music">{{list[0].Expression}}</div>
                         </div>
                       </div>
                     </div>
