--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -13,7 +13,7 @@
           <div class="al-some-albums" style="wigth=150px">
             <div class="videoWrapper"><div ng-bind-html="video.video" class="video-limit"></div></div>
                 <a ui-sref="base.videoView({id:video.objectId})"><h5 class="al-name-albums">{{video.languageName}}</h5></a>
-                <p>{{video.descriptionLan}}</p>
+                <p style="padding-left: 10px; padding-right: 10px;">{{video.descriptionLan}}</p>
           </div>
         </div>
     </div>
