--- a/app/templates/startPage/header.html
+++ b/app/templates/startPage/header.html
@@ -4,7 +4,7 @@
         <div class="col-md-12">
         <ul class="language">
           <li ng-click="getLanguage('Ukraine')" ng-class="{ 'active': active('Ukraine') }">UK</li>
-          <li ng-click="getLanguage('English')" ng-class="{ 'active': active('English') }">En</li>
+          <li ng-click="getLanguage('English')" ng-class="{ 'active': active('English') }">EN</li>
         </ul>
         <button class="toggle_mnu" toggle-menu>
 
