--- a/app/templates/startPage/main.html
+++ b/app/templates/startPage/main.html
@@ -84,7 +84,7 @@
 
 
 
-	<section id="people" class="homesect s_gray section_7"  header-animate>
+	<section id="people" class="homesect s_gray section_7"  >
     <div class="section_header">
   		<h2>{{list[0].s1_people_who_have_made_efforts}}</h2>
   		<div class="s_descr_wrap">
@@ -112,7 +112,7 @@
 	</section>
 
 
-<section id="contacts" class="s_contacts bg_light" header-animate>
+<section id="contacts" class="s_contacts bg_light" >
 	<div class="section_header">
 		<h2>{{list[0].s1_contacts}}</h2>
 		<div class="s_descr_wrap">
