--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,5 +1,4 @@
-
-        <header class="ae-container-fluid ae-container-fluid--full rk-header ">
+      <header class="ae-container-fluid ae-container-fluid--full rk-header ">
           <div class="ae-container-fluid rk-topbar">
             <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
             <nav class="rk-navigation">
@@ -7,7 +6,7 @@
                 <li class="active rk-menu__item" ng-repeat="years in year"><a ng-mouseover="setCategory(years.objectId)" href="" class="rk-menu__link">{{years.year}}</a>
                   <nav class="rk-menu__sub">
                     <ul class="rk-container">
-                      <li ng-repeat="category in items2" class="rk-menu__item"><a ng-click="setPortfolio(years.objectId, category.objectId)" href="" class="rk-menu__link">{{category.name}}</a></li>
+                      <li ng-repeat="category in portfolioName" class="rk-menu__item"><a ng-click="setPortfolio(years.objectId, category.objectId)" href="" class="rk-menu__link">{{category.nameLan}}</a></li>
                     </ul>
                   </nav>
                 </li>
@@ -20,11 +19,10 @@
                   <a ng-repeat="portfolioSort in sortPortfolio" ui-sref="base.portfolioAlt({id:portfolioSort.objectId})" class="rk-item ae-masonry__item">
                     <img src="{{portfolioSort.img.url}}" alt="">
                     <div class="item-meta">
-                      <h2>{{portfolioSort.country}}</h2>
-                      <p>{{portfolioSort.country}}</p>
+                      <h2>{{portfolioSort.languageCountry}}</h2>
+                      <p>{{portfolioSort.languageCity}}</p>
                     </div>
                   </a>
-
                 </div>
               </section>
             </section>
