--- a/app/pre_proc/sass/main.sass
+++ b/app/pre_proc/sass/main.sass
@@ -22,8 +22,7 @@ body textarea:required:valid
 	display: none
 
 .main_color_bg
-	background-image: url(../img/bg2.jpg)
-	max-height: 400px
+	max-height: 700px
 
 
 section,
@@ -540,7 +539,8 @@ svg
 			> div
 				height: 29px
 				width: 16px
-				background-image: url(../../img/slider_arrows.png)
+				// background-image: url(../../img/slider_arrows.png)
+				background-image: url(http://www.cheremosh.lviv.ua/test/img/slider_arrows.png)
 				position: absolute
 				left: 20px
 				opacity: .5
