--- a/app/templates/songs.html
+++ b/app/templates/songs.html
@@ -48,7 +48,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 xs-hidden">
                       <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
-                          <img src="../img/img/cheremosh-2.jpg" class="img-play"/>
+                          <img src="http://cheremosh.lviv.ua/test/img/img/cheremosh-2.jpg" class="img-play"/>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8  wrap-title">
                           <div class="title-music">{{list[0].Expression}}</div>
