--- a/app/templates/startPage/header.html
+++ b/app/templates/startPage/header.html
@@ -1,4 +1,9 @@
-<header class="main_head main_color_bg"  parallax-background parallax-ratio="0.4" parallaxVerticalOffset="10" parallaxHorizontalOffset="10">
+<script>
+$(document).ready(function() {
+  $('.parallax-window').parallax({imageSrc: 'http://cheremosh.lviv.ua/test/img/bg7.jpg'});
+});
+</script>
+<header class="main_head main_color_bg parallax-window"  data-parallax="scroll" data-image-src="http://cheremosh.lviv.ua/test/img/bg7.jpg" parallax data-z-index="1">
       <div class="row">
         <div class="col-md-12">
         <ul class="language">
