--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -21,7 +21,7 @@
           </div>
 				<div class="col-md-6 col-sm-6">
           <h3>{{list[0].s5_about_section}}</h3>
-					<form action="http://formspree.io/yaroshenko270@gmail.com" class="main_form" novalidate target="_blank" method="post">
+					<form action="http://formspree.io/cheremosh.lviv.ua@gmail.com" class="main_form" novalidate target="_blank" method="post">
 						<label class="form-group">
 							<span class="color_element">*</span>{{list[0].Your_name}}:
 							<input type="text" name="name" placeholder="{{list[0].Your_name}}" style="color: #999;!impotant" data-validation-required-message="{{list[0].You_must_enter_your_name}}" required />
