--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,7 +1,7 @@
       <header class="ae-container-fluid ae-container-fluid--full rk-header ">
           <div class="ae-container-fluid rk-topbar">
             <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
-            <nav class="rk-navigation">
+            <!-- <nav class="rk-navigation">
               <ul class="rk-menu">
                 <li class="active rk-menu__item" ng-repeat="years in year"><a ng-mouseover="setCategory(years.objectId)" href="" class="rk-menu__link">{{years.year}}</a>
                   <nav class="rk-menu__sub">
@@ -11,16 +11,18 @@
                   </nav>
                 </li>
               </ul>
-            </nav>
+            </nav>ui-sref="base.portfolioAlt({id:portfolioSort.objectId})" ng-click="setPortfolio(portfolioSort.years, portfolioSort.languageCountry)"-->
           </div>
         </header>
         <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio rk-main">
                 <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-                  <a ng-repeat="portfolioSort in sortPortfolio" ui-sref="base.portfolioAlt({id:portfolioSort.objectId})" class="rk-item ae-masonry__item">
+                  <a ng-repeat="portfolioSort in sortPortfolio" ui-sref="base.portfolioAlt({id:portfolioSort.objectId})"  class="rk-item ae-masonry__item">
                     <img src="{{portfolioSort.img.url}}" alt="">
                     <div class="item-meta">
                       <h2>{{portfolioSort.languageCountry}}</h2>
                       <p>{{portfolioSort.languageCity}}</p>
+                      <!-- <h2>{{portfolioSort.year1}}</h2> -->
+
                     </div>
                   </a>
                 </div>
