year and ngGallery

--- a/app/css/urku.css
+++ b/app/css/urku.css
@@ -91,6 +91,8 @@ body {
   text-align: center;
   text-transform: uppercase;
   width: 20%;
+  padding-top: 30px;
+  padding-left: 25px;
 }
 .rk-logo sup {
   font-size: .5625rem;
