--- a/app/templates/portfolio-expanded.html
+++ b/app/templates/portfolio-expanded.html
@@ -2,6 +2,10 @@
     <div class="ae-container-fluid rk-topbar">
       <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
     </div>
+    <!-- <div>
+      <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
+    </div> -->
+
   </header>
   <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio rk-main">
 
