--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -1,5 +1,8 @@
       <header class="ae-container-fluid ae-container-fluid--full rk-header ">
-          <div class="ae-container-fluid rk-topbar">
+          <!-- <div class="ae-container-fluid rk-topbar">
+            <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
+          </div> -->
+          <div>
             <h1 class="rk-logo"><a href="index.html">{{list[0].s1_portfolio}}<sup>cheremosh</sup></a></h1>
           </div>
         </header>
@@ -10,7 +13,7 @@
                     <div class="item-meta">
                       <h2>{{portfolioSort.languageCountry}}</h2>
                       <p>{{portfolioSort.languageCity}}</p>
-                      <h2>{{sortPortfolio.year}}</h2>
+                      <h2>{{portfolioSort.yearOut}}</h2>
 
                     </div>
                   </a>
