--- a/app/css/video.css
+++ b/app/css/video.css
@@ -83,11 +83,13 @@ img.ng-thumb {
   text-indent: 1.5em;
 	}
 
+
 .ng-gallery-content > a.close-popup {
 margin: 100px 30px 0 0;
-border: 1px solid #fff;
-width: 20px;
+/*border: 1px solid #fff;
+width: 20px;*/
 }
+/*
 .ng-gallery-content > a.nav-left {
 	border: 1px solid #fff;
 	width: 30px;
@@ -95,7 +97,7 @@ width: 20px;
 .ng-gallery-content > a.nav-right {
 	border: 1px solid #fff;
 	width: 30px;
-}
+}*/
 
 .fa-close {
 color: #fff;
